data/all_generated_tests/raw_wast_tests/return_IncorrectConditionEvaluation_2868.wast
;; 7. **Return after Loop with Conditional Branching**:    - Implement a function with loops that contain conditional branches (`br_if`), finishing with a return instruction. Test to see if the return correctly evaluates the function's final state.    - **Reasoning**: Verifies operand stack management and ensures that loop contexts don’t interfere with return instruction behavior.

(assert_invalid
  (module
    (func $return-after-loop-with-conditional-branching (result i32)
      (block
        (loop
          (br_if 0 (i32.const 1))
        )
      )
      (return (i32.add (i32.const 1) (i32.const 2)))
    )
  )
  "type mismatch"
)